@@ -1,5 +1,7 @@
 = HEAD
 
+* Add render_each plugin, for rendering a template for each value in an enumerable (jeremyevans)
+
 * Add backtracking_array plugin, allowing array matchers to backtrack if later matchers do not match (jeremyevans)
 
 * Add :all hash matcher, allowing array matchers to include conditions where you want to match multiple conditions (jeremyevans)
